syntax = "proto3";

package user;

option go_package = "github.com/metal-oopa/distributed-ecommerce/services/user-service/userpb";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  string user_id = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 1;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
}


grpcurl --plaintext -d "{\'email\': \'user@user.com\', \'password\': \'pass\'}' localhost:50051 user.UserService.LoginUser
